--- a/index.less
+++ b/index.less
@@ -4,3 +4,4 @@
 @import "stylesheets/font-mixins";
 @import "stylesheets/selectors";
 @import "stylesheets/selector-mixins";
+@import "stylesheets/tabs";
