--- a/stylesheets/selectors.less
+++ b/stylesheets/selectors.less
@@ -12,4 +12,5 @@
 @{tree-view}, @{tabs}, @{fuzzy-finder}, @{find-and-replace}{
   .file-extension(md);
   .file-extension(json);
+  .file-name(LICENSE);
 }
