Allow any extension or no extension for file-name match

--- a/stylesheets/selector-mixins.less
+++ b/stylesheets/selector-mixins.less
@@ -8,7 +8,7 @@
 }
 
 .file-name(@file){
-  &[data-name=@{file}]{
+  &[data-name^=@{file}]{
     top: 0px;
     &:before {
       .font-content(@file)
