--- a/stylesheets/font-mixins.less
+++ b/stylesheets/font-mixins.less
@@ -1,5 +1,6 @@
 @import "octicon-utf-codes";
 @import "file-icon-supplement-utf-codes";
+@import "fonts";
 
 .font-content(md) {
   .octicon-with-default-style(@markdown);
