--- a/stylesheets/selectors.less
+++ b/stylesheets/selectors.less
@@ -1,3 +1,5 @@
+@import 'selector-mixins';
+
 @tree-view: ~'ol.tree-view span.name.icon';
 @tabs: ~'ul.tab-bar li.tab .title:not(.hide-icon)';
 @fuzzy-finder: ~'.fuzzy-finder .file.icon';
