--- a/stylesheets/selector-mixins.less
+++ b/stylesheets/selector-mixins.less
@@ -10,7 +10,7 @@
 }
 
 .file-name(@file){
-  &[data-name^=@{file}]{
+  &[data-name^="@{file}"]{
     top: 0px;
     &:before {
       .font-content(@file)
