add unique class to DOM for icons

--- a/stylesheets/selectors.less
+++ b/stylesheets/selectors.less
@@ -1,9 +1,9 @@
 @import 'selector-mixins';
 
-@tree-view: ~'ol.tree-view span.name.icon';
-@tabs: ~'ul.tab-bar li.tab .title:not(.hide-icon)';
-@fuzzy-finder: ~'.fuzzy-finder .file.icon';
-@find-and-replace: ~'.results-view span.icon';
+@tree-view: ~'.fis-tree';
+@tabs: ~'.fis-tab:not(.hide-icon)';
+@fuzzy-finder: ~'.fis-fuzzy';
+@find-and-replace: ~'.fis-find';
 
 @{tree-view} {
   &:before {
