--- a/stylesheets/selectors.less
+++ b/stylesheets/selectors.less
@@ -13,9 +13,9 @@
 }
 
 @{tree-view}, @{tabs}, @{fuzzy-finder}, @{find-and-replace}{
-  .file-extension(md);
-  .file-extension(json);
-  .file-extension(coffee);
+  .file-extension(md, mdown; @markdown; @octicons);
+  .file-extension(json, cson; @settings; @octicons);
+  .file-extension(coffee; @coffeescript);
 
   .file-name(LICENSE);
 }
