--- a/stylesheets/selector-mixins.less
+++ b/stylesheets/selector-mixins.less
@@ -1,36 +1,33 @@
 @import 'font-mixins';
 
-.file-extension(@extensions; @icon; @font-family: @fis; @font-size: 16px){
+.load-type-variables(@type) when (@type = extension) {
+  @regex: ~'$';
+  @attr: ~'data-name@{regex}';
+  @period: ~'.';
+};
+
+.load-type-variables(@type) when (@type = file) {
+  @regex: ~'^';
+  @attr: ~'data-name@{regex}';
+  @period: ~''
+};
+
+.load-type-variables(@type) when (@type = grammar) {
+  @attr: ~'title';
+  @period: ~''
+};
+
+.icon-generator(@type; @extensions; @icon; @font-family: @fis; @font-size: 16px){
+  .load-type-variables(@type);
   .loop(length(@extensions));
   .loop(@n) when (@n > 0) {
     @ext: extract(@extensions, @n);
-    &[data-name$=".@{ext}"] {
+    &[@{attr}="@{period}@{ext}"] {
       top: 0;
       &:before {
-        .icon-style;
-        font-family: @font-family;
-        content: @icon;
-        font-size: @font-size;
+        .icon-font(@icon; @font-family; @font-size)
       }
     }
     .loop((@n - 1));
-  }
-}
-
-.file-name(@file){
-  &[data-name^="@{file}"]{
-    top: 0px;
-    &:before {
-      .font-content(@file)
-    }
-  }
-}
-
-.grammar-title(@title){
-  &[title^="@{title}"]{
-    font-size: 0;
-    &:before {
-      .font-content(@title)
-    }
   }
 }
