preparing for grammar-selector@0.32.0

--- a/stylesheets/selector-mixins.less
+++ b/stylesheets/selector-mixins.less
@@ -17,7 +17,7 @@
 }
 
 .load-type-variables(@type) when (@type = grammar) {
-  @attr: ~'title';
+  @attr: ~'data-grammar';
   @period: ~'';
   @text-font-size: 0;
   @margin-right: 0;
