prepare for grammar selector feature with naming distinction

--- a/stylesheets/selector-mixins.less
+++ b/stylesheets/selector-mixins.less
@@ -16,7 +16,7 @@
   @margin-right: 5px;
 }
 
-.load-type-variables(@type) when (@type = grammar) {
+.load-type-variables(@type) when (@type = grammarStatus) {
   @attr: ~'data-grammar';
   @period: ~'';
   @text-font-size: 0;
