--- a/stylesheets/selectors.less
+++ b/stylesheets/selectors.less
@@ -15,5 +15,5 @@
 }
 
 @{grammar-status} {
-  .icon-generator(grammar; CoffeeScript; @coffeescript-text; @font-size: 12px);
+  .icon-generator(grammarStatus; CoffeeScript; @coffeescript-text; @font-size: 12px)
 }
