--- a/stylesheets/selector-mixins.less
+++ b/stylesheets/selector-mixins.less
@@ -5,7 +5,7 @@
   @attr: ~'data-name@{regex}';
   @period: ~'.';
   @text-font-size: inherit;
-  @margin-right: 5px;
+  @margin: 0 5px 0 0;
 }
 
 .load-type-variables(@type) when (@type = file) {
@@ -13,14 +13,34 @@
   @attr: ~'data-name@{regex}';
   @period: ~'';
   @text-font-size: inherit;
-  @margin-right: 5px;
+  @margin: 0 5px 0 0;
 }
 
 .load-type-variables(@type) when (@type = grammarStatus) {
   @attr: ~'data-grammar';
   @period: ~'';
   @text-font-size: 0;
-  @margin-right: 0;
+  @margin: 0;
+}
+
+.load-type-variables(@type) when (@type = grammarSelector) {
+  @attr: ~'data-grammar';
+  @period: ~'';
+  @text-font-size: inherit;
+  @margin: 0 10px 0 20px;
+}
+
+.grammar-icon-after(@type; @font-family; @font-size) when (@type = grammarSelector) {
+  float: right;
+  margin: @margin;
+  width: auto;
+  .icon-font(@icon; @font-family; @font-size);
+}
+
+.icon-before(@type; @font-family; @font-size) when not (@type = grammarSelector) {
+  margin: @margin;
+  width: auto;
+  .icon-font(@icon; @font-family; @font-size);
 }
 
 .icon-generator(@type; @extensions; @icon; @font-family: @fis; @font-size: 16px){
@@ -31,8 +51,10 @@
     &[@{attr}="@{period}@{ext}"] {
       font-size: @text-font-size;
       &:before {
-        margin-right: @margin-right;
-        .icon-font(@icon; @font-family; @font-size)
+        .icon-before(@type; @font-family; @font-size);
+      }
+      &:after {
+        .grammar-icon-after(@type; @font-family; @font-size);
       }
     }
     .loop((@n - 1));
