--- a/stylesheets/selector-mixins.less
+++ b/stylesheets/selector-mixins.less
@@ -39,7 +39,7 @@
 
 .icon-before(@type; @font-family; @font-size) when not (@type = grammarSelector) {
   margin: @margin;
-  width: auto;
+  width: 16px;
   .icon-font(@icon; @font-family; @font-size);
 }
 
