not so important css

--- a/stylesheets/selectors.less
+++ b/stylesheets/selectors.less
@@ -20,5 +20,5 @@
 }
 
 @{grammar-selector} {
-  .icon-generator(grammarSelector; CoffeeScript; @coffeescript-text; @font-size: 14px) !important;
+  .icon-generator(grammarSelector; CoffeeScript; @coffeescript-text; @font-size: 14px);
 }
