:lipstick: missing semicolon

--- a/stylesheets/selectors.less
+++ b/stylesheets/selectors.less
@@ -16,7 +16,7 @@
 }
 
 @{grammar-status} {
-  .icon-generator(grammarStatus; CoffeeScript; @coffeescript-text; @font-size: 12px)
+  .icon-generator(grammarStatus; CoffeeScript; @coffeescript-text; @font-size: 12px);
 }
 
 @{grammar-selector} {
